--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,7 @@
 APP_NAME=Laravel
 APP_ENV=local
 APP_KEY=base64:OgkVA0B6vBX4SUAR9uBkXjtKD3Jqdgk07DPDgV7W7ig=
-APP_DEBUG=false
+APP_DEBUG=true
 APP_URL=http://localhost
 
 DB_CONNECTION=mysql
